test/fails/bad_tags/assign9.lgl
mat1x2 x = [1., 1.]:mat1x2; // No implicit cast from vectors to matrices